Legacy routes as composition, leg 3a: the engine's key rules on the stack
The stack's lifts follow the engine's union join path, read to its end and
written down as receipts (docs/LEG2_STACK_AUDIT_2026_09_14.md): one group
per target set with the OR over every route's condition; per read on both
sides the key is the property when that arm's / that set's binding maps
the column as a scalar property (one name across the arms, matched by
value), else a per-entry / per-group column; an arm without a route makes
every key per set; graph fetch pairs on the per-entry and per-group keys.
Pins: a list per property; the arms' pins resolve under the queried
mapping (one pinned id resolves to that set, several to the class's root
through operations, an unbound pin to the root). The two surviving
classification poisons are route lists; the Otherwise fallback set rides
as a pin and a route; un-routed navigations no longer dispatch through the
stamped set-pin facts; a stack parent's correlated aggregation joins back
on the OR of its key pairs; a graph-fetch head relation's inlined join
condition is a correlation-stamped filter. Witness StackShapeWitnessTest.
DuckDB 108 / H2 444 EXACT; chain green. Record in docs/GATES.md.

Co-Authored-By: Claude Fable 5.1 <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_01VMzYQkYw6mbxuFFRropZAs